// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About snapshots should render with app update 1`] = `
<div
  className="about"
>
  <div
    className="about__title"
  >
    <h1
      className="heading-1"
    >
      BuscaTermos
    </h1>
    <div
      className="about__title-date"
    >
      <p
        className="paragraph"
      >
        2014 - 2025
      </p>
    </div>
  </div>
  <div
    className="about__info"
  >
    <div
      className="about__info-item"
    >
      <p
        className="paragraph paragraph--bold"
      >
        Versão:
      </p>
      <p
        className="paragraph"
      >
        1.6.9
      </p>
    </div>
    <div
      className="about__info-item"
    >
      <p
        className="paragraph paragraph--bold"
      >
        Atualizações:
      </p>
      <div
        className="about__info-updates"
      >
        <div
          className="about__info-updates-icon about__info-updates-icon--red"
        >
          <div
            className="icon"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="1 4 1 10 7 10"
              />
              <polyline
                points="23 20 23 14 17 14"
              />
              <path
                d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15"
              />
            </svg>
          </div>
        </div>
        <button
          className="link"
          onClick={[Function]}
        >
          <div
            className="link__text"
          >
            Existem atualizações disponíveis
          </div>
          <div
            className="link__icon"
          >
            <div
              className="icon"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
                />
                <polyline
                  points="15 3 21 3 21 9"
                />
                <line
                  x1="10"
                  x2="21"
                  y1="14"
                  y2="3"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="about__info-item"
    >
      <p
        className="paragraph paragraph--bold"
      >
        Desenvolvido por:
      </p>
      <p
        className="paragraph"
      >
        Giovane de Oliveira
      </p>
      <p
        className="paragraph"
      >
        giovane.oliveira@softexpert.com
      </p>
    </div>
    <div
      className="about__info-item"
    >
      <p
        className="paragraph paragraph--bold"
      >
        Bugs e/ou melhorias? Cadastre uma issue em:
      </p>
      <button
        className="link"
        onClick={[Function]}
      >
        <div
          className="link__text"
        >
          BuscaTermos - Issues
        </div>
        <div
          className="link__icon"
        >
          <div
            className="icon"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
              />
              <polyline
                points="15 3 21 3 21 9"
              />
              <line
                x1="10"
                x2="21"
                y1="14"
                y2="3"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
  <div
    className="about__button"
  >
    <button
      className="button"
      onClick={[Function]}
    >
      <div
        className="button__content"
      >
        Voltar
      </div>
    </button>
  </div>
</div>
`;

exports[`About snapshots should render without app update 1`] = `
<div
  className="about"
>
  <div
    className="about__title"
  >
    <h1
      className="heading-1"
    >
      BuscaTermos
    </h1>
    <div
      className="about__title-date"
    >
      <p
        className="paragraph"
      >
        2014 - 2025
      </p>
    </div>
  </div>
  <div
    className="about__info"
  >
    <div
      className="about__info-item"
    >
      <p
        className="paragraph paragraph--bold"
      >
        Versão:
      </p>
      <p
        className="paragraph"
      >
        1.6.9
      </p>
    </div>
    <div
      className="about__info-item"
    >
      <p
        className="paragraph paragraph--bold"
      >
        Atualizações:
      </p>
      <div
        className="about__info-updates"
      >
        <div
          className="about__info-updates-icon"
        >
          <div
            className="icon"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="20 6 9 17 4 12"
              />
            </svg>
          </div>
        </div>
        <p
          className="paragraph"
        >
          O aplicativo está atualizado
        </p>
      </div>
    </div>
    <div
      className="about__info-item"
    >
      <p
        className="paragraph paragraph--bold"
      >
        Desenvolvido por:
      </p>
      <p
        className="paragraph"
      >
        Giovane de Oliveira
      </p>
      <p
        className="paragraph"
      >
        giovane.oliveira@softexpert.com
      </p>
    </div>
    <div
      className="about__info-item"
    >
      <p
        className="paragraph paragraph--bold"
      >
        Bugs e/ou melhorias? Cadastre uma issue em:
      </p>
      <button
        className="link"
        onClick={[Function]}
      >
        <div
          className="link__text"
        >
          BuscaTermos - Issues
        </div>
        <div
          className="link__icon"
        >
          <div
            className="icon"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
              />
              <polyline
                points="15 3 21 3 21 9"
              />
              <line
                x1="10"
                x2="21"
                y1="14"
                y2="3"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
  <div
    className="about__button"
  >
    <button
      className="button"
      onClick={[Function]}
    >
      <div
        className="button__content"
      >
        Voltar
      </div>
    </button>
  </div>
</div>
`;
